# Parallellized-Polynomial-Root-Finder

./: .gitignore  CITATION.cff  CMakeLists.txt  LICENSE  Makefile  README.md  poly_roots_cpu(1).cpp
apps/: demo.cpp  solve_cli.cpp
bench/: README.md  benchmark.py  throughput.py
cuda/: README.md  batched_solve.cu  p0_grid_winding.cu  p1_edge_winding.cu  p2_subdivide_solve.cu  polyroots.cuh  scatter_winding.cu  solve.cu
cuda/tests/: host_checks.cpp
gui/: app.py  index.html  polyparse.py  server.py
include/polyroots/: constants.hpp  newton.hpp  polynomial.hpp  root_bound.hpp  solver.hpp  winding.hpp
paper/: paper.tex
src/: newton.cpp  polynomial.cpp  root_bound.cpp  solver.cpp  winding.cpp
tests/: test_helpers.hpp  test_newton.cpp  test_polynomial.cpp  test_root_bound.cpp  test_solver.cpp  test_solver_stress.cpp  test_winding.cpp
